@@ -1,0 +1,40 @@
+<project name="ec2" default="package" basedir=".">
+  <import file="../build-contrib.xml"/>
+
+  <target name="compile">
+    <copy todir="${build.dir}">
+      <fileset dir="${root}">
+	<exclude name="build.xml"/>
+      </fileset>
+    </copy>
+    <exec executable="sed">
+      <arg value="-i"/>
+      <arg value="-e"/> <arg value="s/@HBASE_VERSION@/${version}/g"/>
+      <arg value="${build.dir}/bin/hbase-ec2-env.sh"/>
+    </exec>
+  </target>
+
+  <target name="package" depends="compile">
+    <mkdir dir="${dist.dir}/contrib/${name}"/>
+    <copy todir="${dist.dir}/contrib/${name}">
+      <fileset dir="${build.dir}"/>
+    </copy>
+    <exec executable="chmod">
+      <arg value="755"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/hbase-ec2"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/cmd-hbase-cluster"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/create-hbase-image"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/delete-hbase-cluster"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/init-hbase-cluster-secgroups"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/launch-hbase-cluster"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/launch-hbase-master"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/launch-hbase-slaves"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/launch-hbase-zookeeper"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/list-hbase-clusters"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/revoke-hbase-cluster-secgroups"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/terminate-hbase-cluster"/>
+      <arg value="${dist.dir}/contrib/${name}/bin/image/create-hbase-image-remote"/>
+    </exec>
+  </target>
+
+</project>
