@@ -298,6 +298,7 @@ Release 0.21.0 - Unreleased
    HBASE-2107  Upgrading Lucene 2.2 to Lucene 3.0.0 (Kay Kay via Stack)
    HBASE-2111  Move to ivy broke our being able to run in-place; i.e.
                ./bin/start-hbase.sh in a checkout
+   HBASE-2103  [EC2] pull version from build
 
   NEW FEATURES
    HBASE-1901  "General" partitioner for "hbase-48" bulk (behind the api, write
